fixed sticky navigation empty space at the top, cookie button link color on Safari and cookie message section reponsive width

--- a/responsive.css
+++ b/responsive.css
@@ -145,7 +145,7 @@
     display: none;
   }
   .cookie-message button,
-  “ .cookie-message {
+  .cookie-message {
     font-size: 0.8rem;
   }
   .login__input {
